[package]
name = "ffpt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", optional = true, features = ["derive"] }
bitvec = { version = "1" }
hashbrown = "0.14.0"
thiserror = "1.0.63"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5.0"
coverage-helper = "0.2.2"
rand_pcg = "0.3.1"
rustc-hash = { version = "2.0.0" }
